# test-2

./: README.md  main.py  pyproject.toml  reqirement.txt  server_runer.py
Backend/: backend.py
Data-set/: Blood_Cancer_Realistic_Dataset.csv
Frotend/: app.py
Model/: main.ipynb
pipeline/: data_ingeation.py  pipeline.py  process_data.py  train_evaluation_data.py  train_test_split_data.py
pipeline/model_disk/: Blood_cancer_prediction_model.h5
